--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,21 @@
 <div class="container-fluid">
   <h2>Registration Form</h2>
+
+  <form>
+    <div class="form-group">
+      <label for="">Username</label>
+      <input type="text" class="form-control">
+    </div>
+    <div class="form-group">
+      <label for="">Password</label>
+      <input type="password" class="form-control">
+    </div>
+    <div class="form-group">
+      <label for="">Confirm Password</label>
+      <input type="password" class="form-control">
+    </div>
+    <button type="submit" class="btn btn-primary">Register</button>
+
+  </form>
+
 </div>
