--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,23 @@
 <div class="container-fluid">
   <h2>Registration Form</h2>
 
-  <form>
+  <form [formGroup]=registrationForm>
     <div class="form-group">
       <label for="">Username</label>
-      <input type="text" class="form-control">
+      <input type="text" class="form-control" formControlName="username">
     </div>
     <div class="form-group">
       <label for="">Password</label>
-      <input type="password" class="form-control">
+      <input type="password" class="form-control" formControlName="password">
     </div>
     <div class="form-group">
       <label for="">Confirm Password</label>
-      <input type="password" class="form-control">
+      <input type="password" class="form-control" formControlName="confirmPassword">
     </div>
     <button type="submit" class="btn btn-primary">Register</button>
 
   </form>
+
+  <p>{{ registrationForm.value | json }}</p>
 
 </div>
