20 - Managing Control Values

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,8 @@
     </div>
     <button type="submit" class="btn btn-primary">Register</button>
 
+    <button (click)="loadApiData()" type="submit" class="btn-secondary ml-2">Load API Data</button>
+
   </form>
   
 </div>
